service-mesh/policies/deny-cross-namespace.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: deny-cross-namespace-cache-store
  namespace: secure-middleware
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: cache-store-server
  requiredAuthenticationRefs:
  - name: hunger-check-allowed
    kind: MeshTLSAuthentication
    group: policy.linkerd.io
    namespace: secure-middleware
